--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -130,7 +130,7 @@
     width: 200px;
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: rgb(81, 26, 136);
+    background-color: #111D2E;
     margin: 0px;
     text-decoration: none;
     text-transform: uppercase;
