--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,8 +4,12 @@
     background-color: #07005d;
     // background: linear-gradient(to top, #000046 50%, #8E2DE2 100%);
     // background: linear-gradient(to top, #07005d 20%, #fc4d4e 100%);
-    background-image: linear-gradient(137.86deg, #07005d, rgb(91, 12, 143) 43.75%, rgb(252, 77, 106));
-
+    // background-image: linear-gradient(137.86deg, #07005d, rgb(91, 12, 143) 43.75%, rgb(252, 77, 106));
+  background-image: url('/header-bg-mac.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; 
     height: 100%;
     width: 100%;
   }
