--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -27,16 +27,26 @@
       text-align: center;
       font-family: "Montserrat Regular";
       font-size: 26px;
-      padding-top: 20px;
-      padding-bottom: 20px;
       margin: 0;
-      transition: background 0.3s ease-in-out;
+      padding: 0;
+      transition: background 0.2s ease-in-out, padding-left 0.2s ease-in-out;
       cursor: pointer;
     }
     li:hover {
       background: rgb(219, 71, 98);
+      padding-left: 15px;
     }
   }
+}
+
+.navButton {
+  color: #fff;
+  text-decoration: none;
+  width: 100%;
+  text-align: center;
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .website-content{
@@ -138,4 +148,56 @@
     top: 18px;
     width: 0%;
     left: 50%;
+  }
+
+  .side-menu-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 40px;
+  }
+
+  .side-menu-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 300px;
+    a {
+      width: 25px;
+      height: auto;
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+    img {
+      color: #fff;
+      max-width: 25px;
+      height: auto;
+      margin: 0;
+      transition: margin-right 0.3s ease-in-out;
+    }
+  }
+
+  .side-menu-contact {
+    a {
+      width: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      font-family: "Montserrat Regular";
+      font-size: 14px;
+      color: #fff;
+      font-weight: 400;
+      line-height: 30px;
+      text-decoration: none;
+      img {
+        width: 20px;
+        margin-right: 10px;
+        margin-bottom: 0;
+      }
+    }
   }
